--- a/css/coin-slider.css
+++ b/css/coin-slider.css
@@ -32,7 +32,7 @@
 }
 .cs-buttons a.cs-active {
 	color:#fff;
-	background-image:url(../images/slide_a.png);
+	background-image:url(../images/m1.jpg);
 }
 /* text in slider */
 .cs-title {
